--- a/app/src/main/res/layout/activity_recycler_swipe_menu_left.xml
+++ b/app/src/main/res/layout/activity_recycler_swipe_menu_left.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
+              android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:orientation="horizontal">
 
     <LinearLayout
         android:id="@+id/menu_1"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@color/colorPrimary"
         android:gravity="center"
@@ -27,7 +27,7 @@
 
     <LinearLayout
         android:id="@+id/menu_2"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@color/colorAccent"
         android:gravity="center"
