RecyclerView 新增分组 + 悬浮Head 功能

--- a/app/src/main/res/layout/activity_recycler_group_item.xml
+++ b/app/src/main/res/layout/activity_recycler_group_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="70dp"
-              android:background="#ff0000"
+              android:background="#22ff22"
               android:gravity="center_vertical">
 
     <TextView
