--- a/app/src/main/res/layout/activity_recycler_group_item2.xml
+++ b/app/src/main/res/layout/activity_recycler_group_item2.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="80dp"
-              android:background="#00ff00"
+              android:background="#EE22DF"
               android:gravity="center_vertical">
 
     <TextView
