--- a/app/src/main/res/layout/activity_recycler_item2.xml
+++ b/app/src/main/res/layout/activity_recycler_item2.xml
@@ -5,8 +5,7 @@
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
-    android:focusable="true"
-    android:orientation="vertical">
+    android:focusable="true">
 
     <LinearLayout
         android:layout_width="match_parent"
