支持多层级分组 + 悬浮分组头, 并优化了Item的各种事件

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,14 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </android.support.v7.widget.RecyclerView>
+            android:layout_height="wrap_content"/>
+
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <com.acmenxd.recyclerview.group.GroupHeadLayout
         android:id="@+id/groupLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp">
-    </com.acmenxd.recyclerview.group.GroupHeadLayout>
+        android:layout_margin="10dp"/>
 
 </FrameLayout>
