--- a/app/src/main/res/layout/activity_recycler_group_item.xml
+++ b/app/src/main/res/layout/activity_recycler_group_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="70dp"
+              android:layout_height="60dp"
               android:background="#22ff22"
               android:gravity="center_vertical">
 
@@ -9,7 +9,6 @@
         android:id="@+id/activity_recycler_group_item_tv_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        />
+        android:layout_marginLeft="8dp"/>
 
 </LinearLayout>
