--- a/app/src/main/res/layout/activity_recycler_group_item4.xml
+++ b/app/src/main/res/layout/activity_recycler_group_item4.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="50dp"
-              android:background="#EE22DF"
+              android:layout_height="30dp"
+              android:background="#FF0000"
               android:gravity="center_vertical">
 
     <TextView
