--- a/app/src/main/res/layout/activity_recycler_item3.xml
+++ b/app/src/main/res/layout/activity_recycler_item3.xml
@@ -4,7 +4,4 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
-    android:clickable="true"
-    android:focusable="true"
-    android:orientation="vertical">
-</com.acmenxd.recyclerview.group.GroupItemLayout>
+    android:orientation="vertical"/>
